--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <link rel="stylesheet" href="css/responsive.css">
    <link rel="stylesheet" href="css/owl.carousel.min.css">
    <!-- fevicon -->
-   <link rel="icon" href="img/log.png" type="image/png">
+   <link rel="icon" href="images/lengedFX/logo.jpeg" type="image/png">
    <!-- Scrollbar Custom CSS -->
    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
    <!-- Tweaks for older IEs-->
